<resources>
    <string name="app_name">Mobile App as1</string>

    <!--  LOGIN MENU -->
    <string name="login">Login</string>
    <string name="username">Login</string>
    <string name="password">Login</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="username_incorrect">Username Incorrect</string>
    <string name="welcome">Welcome</string>

    <!-- Usernames -->
    <string-array name="usernames">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
        <item>eight</item>
        <item>nine</item>
        <item>ten</item>
    </string-array>

    <!-- ACTIVITY TITLES -->
    <string name="title_miscellaneous">Miscellaneous</string>
    <string name="title_activity_selection">SelectionActivity</string>
    <string name="title_note">Notes</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_quiz_question">Question</string>
    <string name="title_calc">Calculator</string>
    <string name="title_dice">Dice</string>
    <string name="title_lang">Language</string>

    <!-- NOTES -->
    <string name="same_note_title">Already Existing Title</string>
    <string name="note_create">Create</string>
    <string name="note_cancel">Cancel</string>
    <string name="note_delete">Delete</string>
    <string name="note_update">Update</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- DICE -->
    <string name="minvalue">Min</string>
    <string name="maxvalue">Max</string>
    <string name="defaultvalues">Defualt: 1-6</string>
    <string name="generatenumberbutton">Generate</string>

    <string name="numbererror_tolarge">Number To Large</string>
    <string name="numbererror_minlarger">Min is Larger</string>

    <!-- CALCULATOR -->
    <!-- calculator line -->
    <string name="calc_default">Enter Sum...</string>

    <!-- bottom line -->
    <string name="calc_0">0</string>
    <string name="calc_point">.</string>
    <string name="calc_root"> </string>
    <string name="calc_ans">Ans</string>
    <string name="calc_equals">=</string>

    <!-- second line -->
    <string name="calc_1">1</string>
    <string name="calc_2">2</string>
    <string name="calc_3">3</string>
    <string name="calc_plus">+</string>
    <string name="calc_minus">-</string>

    <!-- third line -->
    <string name="calc_4">4</string>
    <string name="calc_5">5</string>
    <string name="calc_6">6</string>
    <string name="calc_multiply">x</string>
    <string name="calc_divide">÷</string>

    <!-- fourth line -->
    <string name="calc_7">7</string>
    <string name="calc_8">8</string>
    <string name="calc_9">9</string>
    <string name="calc_del">DEL</string>
    <string name="calc_ac">AC</string>
</resources>