<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_note" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_calc"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calc" />
    <item
        android:id="@+id/navigation_dice"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_dice" />
    <item
        android:id="@+id/navigation_lang"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_lang" />

</menu>