<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mobileappas1.ui.Quiz.QuizFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mobileappas1.ui.Notes.NoteFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mobileappas1.ui.Calc.CalcFragment"
        android:label="@string/title_calc"
        tools:layout="@layout/fragment_notifications" />
</navigation>