<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".ui.Dice.DiceFragment">

    <ImageView
        android:id="@+id/diceanswer_text_bg"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button_detailed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diceanswer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:autoText="true"
        android:background="#00FFFFFF"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diceanswer_text_bg" />

    <ImageView
        android:id="@+id/minvalue_entry_bg"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_button"
        android:alpha="0.5"
        app:layout_constraintBottom_toTopOf="@+id/generatenumber_button"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/minvalue_entry"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="number"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/generatenumber_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generatenumber_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:text="@string/generatenumberbutton"
        android:textColor="@color/white"
        android:background="@drawable/background_button_detailed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/maxvale_entry_bg"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_button"
        android:alpha="0.5"
        app:layout_constraintBottom_toTopOf="@+id/generatenumber_button"
        app:layout_constraintEnd_toEndOf="parent" />
    <EditText
        android:id="@+id/maxvale_entry"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:textColor="@color/white"
        android:inputType="number"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/generatenumber_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/minavalue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/minvalue"
        android:background="#00FFFFFF"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/minvalue_entry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/maxvalue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/maxvalue"
        android:background="#00FFFFFF"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/maxvale_entry"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/defaultvalue_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/defaultvalues"
        android:background="#00FFFFFF"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/minavalue_text"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>